ml, days aligned fixed

--- a/public/src/components/TimePicker/time-picker.module.css
+++ b/public/src/components/TimePicker/time-picker.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 100%;
+  width: 210px;
   display: flex;
 }
 
